0.9.5 - unreleased
* New EnsureFieldsPresenceProcessor (thbar)
* New CsvDestination based on FasterCSV (lgustafson)
* Fix #41: Allow cache to be turned off on ForeignKeyLookupTransform
* Fix #36: etl --read-locally picks wrong last file (lgustafson)
* BREAKING CHANGE: DelimitedParser has been renamed to CsvParser, to emphasize the fact that this parser relies on FasterCSV under the hood (which means it will choke on faulty data).
* Fixes for Rails 3 (gkfabs)
* Fixes for Ruby 1.9.2 (jlecour, byrnejb, thbar)
* improvements on CalculationTransform (gkfabs)
* batch can have children (gkfabs)
* read all columns by default in CsvParser (smeyfroi)
* Turn db config into a HashWithIndifferentAccess (smeyfroi)
* DatabaseJoinProcessor (gkfabs)
* ImapattachmentDownloaderProcessor (gkfabs)
* Pop3attachementDownloaderProcessor (gkfabs)
* Enhancements and fixes on EscapeCSVProcessor (gkfabs)
* Bug correction on hash initialization DatabaseSource (gkfabs)
* FilterRowProcessor won't return nil (gkfabs)
* DatabaseSource fixes (gkfabs)
* New UpdateDatabaseDestination (gkfabs)
* New InsertUpdateDatabaseDestination (gkfabs)
* New Excel destination (gkfabs)
* New Excel parser (gkfabs)
* Add ability to use a query in DatabaseSource (gkfabs)
* Modified SQLResolver to allow for multiple key lookups on dimension
table (cdimartino)
* Add scd_required_fields which allow to avoid specifying the scd fields when specifying :unique in a destination (darrell)
* More SCD debug logging (darrell)
* Make database destination table quoting database agnostic (darrell)
* Allow absolute paths in file destinations and file bulk imports (darrell)
* Bug fixes on engine, destination (sasikumargn, cdimartino, darrell)
* Code and tests clean-up (mainej, aeden, thbar)
* No more failure on tests (thbar, gkfabs)
* Add the ability to automatically run the tests on a matrix of configuration including Rails 2/3, Ruby 1.8.7/1.9.2, MySQL/Postgresql (thbar)
* Use bundler for gem packaging and release (thbar)
