@@ -14,16 +14,21 @@ module ETL #:nodoc:
       # Options:
       # * <tt>:target</tt>: The target connection
       # * <tt>:table</tt>: The table name
+      # * <tt>:options</tt>: Optional truncate options
       def initialize(control, configuration)
         super
         #@file = File.join(File.dirname(control.file), configuration[:file])
         @target = configuration[:target] || {}
         @table = configuration[:table]
+        @options = configuration[:options] 
       end
       
       def process
         conn = ETL::Engine.connection(target)
-        conn.truncate(table_name)
+        if conn.is_a?(ActiveRecord::ConnectionAdapters::PostgreSQLAdapter)
+          @options ||= 'RESTART IDENTITY'
+        end
+        conn.truncate(table_name, @options)
       end
       
       private
